plugins {
    id 'java-library'
    id 'maven-publish'
    // https://projects.neoforged.net/neoforged/moddevgradle
    id 'net.neoforged.moddev' version '2.0.147'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

// Mojang ships Java 25 to end users in 26.1.2, so mods should target Java 25.
java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    withSourcesJar()
}

def gametest_mod_id = mod_id + "_test"

neoForge {

    enable {
        version = project.neo_version
        disableRecompilation = System.getenv("CI") == "true"
    }


    addModdingDependenciesTo(sourceSets.test)

    validateAccessTransformers = true

    runs {
        client {
            client()
            sourceSet = sourceSets.test
        }

        client2 {
            client()
            programArguments.addAll('--username', 'Dev2')
        }

        server {
            server()
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        gameTestServer {
            type = "gameTestServer"
            sourceSet = sourceSets.test
        }

        clientData {
            clientData()
            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/main/generated_resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'neoforge.enableGameTest', 'true'
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},${gametest_mod_id}"
            gameDirectory = project.file('runs/' + name)
            // Recommended logging level for the console
            logLevel = org.slf4j.event.Level.DEBUG

            jvmArguments.addAll '-Xmx4G'
        }
    }

    mods {
        // define mod <-> source bindings
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
        "${gametest_mod_id}" {
            sourceSet(sourceSets.test)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/main/generated_resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven { url = "https://api.modrinth.com/maven" }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
}


dependencies {
    implementation "maven.modrinth:jade:${jade_version}"
    // api "curse.maven:jade-324717:${jade_api}"

    api "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    implementation "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    localRuntime(testImplementation("net.neoforged:testframework:${neo_version}"))
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            jade_version_range     : jade_version_range,
            jei_version_range      : jei_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata


// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}


// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

task deobfJar(type: Jar) {
    from sourceSets.main.output
    archiveClassifier = 'deobf'
}

task apiJar(type: Jar) {
    archiveClassifier = 'api'
    include 'com/legobmw99/allomancy/api/**/*'
    from sourceSets.main.allSource
    from sourceSets.main.output
}

artifacts {
    archives jar
    archives apiJar
    archives deobfJar
}

test {
    enabled = false
}


////////////////
// IntelliJ Project Import
// The Mixin annotation process does not have an obfuscation source when running through the IntelliJ compiler,
// thus we have to prevent it from being activated as part of importing this Gradle project into IntelliJ.
if (System.getProperty("idea.sync.active") == "true") {
    afterEvaluate {
        tasks.withType(JavaCompile).all {
            it.options.annotationProcessorPath = files()
        }
    }
}
